cmake_minimum_required(VERSION 3.17)
project(Leetcode_CPP)

set(CMAKE_CXX_STANDARD 14)

add_executable(Leetcode_CPP main.cpp "02-Divide and conquer/P2/153-Find Minimum in Rotated Sorted Array/_153.cpp" "02-Divide and conquer/P2/154/_154.cpp" "02-Divide and conquer/P1/169-Majority Element/_169.cpp" "01-Tree/P01/94-Binary Tree Inorder Traversal/_94.cpp")